@@ -2,6 +2,7 @@ package org.example;
 
 import com.fastcgi.FCGIInterface;
 
+import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -12,10 +13,11 @@ public class Main {
         FCGIInterface fcgiInterface = new FCGIInterface();
         Validation validation = new Validation();
         HitCheck hitCheck = new HitCheck();
+        System.out.println("Server starts . . .");
 
         while (fcgiInterface.FCGIaccept() >= 0) {
-            String method = FCGIInterface.request.params.getProperty("REQUEST_METHOD");
 
+            String method = FCGIInterface.request.params.getProperty("REQUEST_METHOD");
             if (method == null) {
                 System.out.println(error("Unsupported HTTP method: null"));
                 continue;
@@ -23,7 +25,11 @@ public class Main {
 
             if (method.equals("POST")) {
                 long startTime = System.nanoTime();
-
+                String contentType = FCGIInterface.request.params.getProperty("CONTENT_TYPE");
+                if (!"application/x-www-form-urlencoded".equals(contentType)) {
+                    System.out.println(error("Unsupported Content-Type"));
+                    continue;
+                }
                 String body;
                 try {
                     body = new String(FCGIInterface.request.inStream.readAllBytes(), StandardCharsets.UTF_8);
@@ -81,39 +87,45 @@ public class Main {
 
     private static String error(String msg) {
         String content = "{\"error\":\"" + msg + "\"}";
-        return """
-               HTTP/1.1 400 Bad Request
-               Content-Type: application/json; charset=utf-8
-               Content-Length: %d
-
-               %s
-               """.formatted(content.getBytes(StandardCharsets.UTF_8).length, content);
+        return String.format(
+                "HTTP/1.1 400 Bad Request\r\n" +
+                        "Content-Type: application/json; charset=utf-8\r\n" +
+                        "Content-Length: %d\r\n" +
+                        "\r\n" +
+                        "%s",
+                content.getBytes(StandardCharsets.UTF_8).length, content
+        );
     }
 
     private static LinkedHashMap<String, String> parse(String query) {
         LinkedHashMap<String, String> result = new LinkedHashMap<>();
+        if (query == null || query.isBlank()) return result;
         for (String pair : query.split("&")) {
-            String[] parts = pair.split("=");
-            if (parts.length == 2)
-                result.put(parts[0], parts[1]);
+            if (pair.isEmpty()) continue;
+            String[] parts = pair.split("=", 2); // limit = 2
+            if (parts.length == 2) {
+                String key = URLDecoder.decode(parts[0], StandardCharsets.UTF_8);
+                String value = URLDecoder.decode(parts[1], StandardCharsets.UTF_8);
+                result.put(key, value);
+            }
         }
         return result;
     }
 
     private static String response(String x, String y, String r, boolean hit, long startTime) {
         String content = String.format(
-                "{\"x\":\"%s\",\"y\":\"%s\",\"r\":\"%s\",\"hit\":%s,\"time\":\"%s\",\"scriptTime\":%.3f}",
+                "{\"x\":\"%s\",\"y\":\"%s\",\"r\":\"%s\",\"hit\":%s,\"time\":\"%s\",\"scriptTime\":%s}",
                 x, y, r, hit,
                 LocalDateTime.now().format(DateTimeFormatter.ofPattern("HH:mm:ss")),
-                (System.nanoTime() - startTime) / 1_000_000.0
+                (System.nanoTime() - startTime) / 10000000
         );
-
-        return """
-               HTTP/1.1 200 OK
-               Content-Type: application/json; charset=utf-8
-               Content-Length: %d
-
-               %s
-               """.formatted(content.getBytes(StandardCharsets.UTF_8).length, content);
+        return String.format(
+                "HTTP/1.1 200 OK\r\n" +
+                        "Content-Type: application/json; charset=utf-8\r\n" +
+                        "Content-Length: %d\r\n" +
+                        "\r\n" +
+                        "%s",
+                content.getBytes(StandardCharsets.UTF_8).length, content
+        );
     }
 }
